--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -22,6 +22,6 @@ jobs:
             echo Downloading Mend CLI
             curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend 
             echo Start Mend CLI scan
-            ./mend dep -u -s "beng_demo_gh//BenG//CSM_V1" -r
+            ./mend dep -u -s "beng_demo_gh//BenG//CSM_V1" -r --label-proj "test" 
             ./mend code -s "beng_demo_gh//BenG//CSM_V1" --snippet-size 0
             ./mend image ubuntu:latest --scope "beng_demo_gh//BenG//CSM_V1"
