--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,16 @@
        <artifactId>spring-boot-starter-actuator</artifactId>
        <version>2.7.1</version>
       </dependency>  
-
+     <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-actuator-autoconfigure</artifactId>
+       <version>2.7.1</version>
+     </dependency>
+     <dependency>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-actuator</artifactId>
+       <version>2.7.1</version>
+     </dependency>
 
       <dependency>
         <groupId>org.apache.commons</groupId>
