--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -21,5 +21,5 @@ jobs:
             curl -LJO https://downloads.mend.io/production/unified/latest/linux_amd64/mend && chmod +x mend 
             echo Start Mend CLI scan
             ./mend dep --dev -u -s 'beng_demo_gh//BenG//CSM_V2' -r
-            #./mend code -s "beng_demo_gh//BenG//CSM_V1" --snippet-size 0
-            #./mend image ubuntu:latest --scope "beng_demo_gh//BenG//CSM_V1"
+            ./mend code -s "beng_demo_gh//BenG//CSM_V2" --snippet-size 0
+            ./mend image ubuntu:latest --scope "beng_demo_gh//BenG//CSM_V2"
